Fixed weird off-center slogan text

--- a/static/styles/manhood.css
+++ b/static/styles/manhood.css
@@ -26,7 +26,6 @@ body {
 
 .slogan {
 	display: block;
-	width: 38%;
 	margin: 60px auto;
 	font-family: 'Special Elite';
 	text-align: center;
